zz-nvim/grammars/doddish/test/corpus/queries.txt
================================================================================
bare tag
================================================================================
todo
--------------------------------------------------------------------------------

(source_file
  (term
    (tag
      (identifier))))

================================================================================
type object query
================================================================================
!md:t
--------------------------------------------------------------------------------

(source_file
  (term
    (type_filter
      name: (identifier))
    (sigil)
    (genres
      (genre
        (identifier)))))

================================================================================
combined genres
================================================================================
:z,t,e
--------------------------------------------------------------------------------

(source_file
  (term
    (sigil)
    (genres
      (genre
        (identifier))
      (genre
        (identifier))
      (genre
        (identifier)))))

================================================================================
object id with external sigil and genre
================================================================================
one/uno.zettel
--------------------------------------------------------------------------------

(source_file
  (term
    (object_id
      left: (identifier)
      right: (identifier))
    (sigil)
    (genres
      (genre
        (identifier)))))

================================================================================
repo id
================================================================================
/repo:k
--------------------------------------------------------------------------------

(source_file
  (term
    (object_id
      name: (identifier))
    (sigil)
    (genres
      (genre
        (identifier)))))

================================================================================
AND of tag and type
================================================================================
priority-0_must !task
--------------------------------------------------------------------------------

(source_file
  (term
    (tag
      (identifier)))
  (term
    (type_filter
      name: (identifier))))

================================================================================
negated tag
================================================================================
^todo
--------------------------------------------------------------------------------

(source_file
  (negation
    (term
      (tag
        (identifier)))))

================================================================================
group with genre suffix
================================================================================
[!md,home]:z
--------------------------------------------------------------------------------

(source_file
  (group
    (type_filter
      name: (identifier))
    (tag
      (identifier))
    (sigil)
    (genres
      (genre
        (identifier)))))

================================================================================
exact type match
================================================================================
=!md
--------------------------------------------------------------------------------

(source_file
  (term
    (exact
      (type_filter
        name: (identifier)))))

================================================================================
negated group and tag
================================================================================
^[test,house] home
--------------------------------------------------------------------------------

(source_file
  (negation
    (group
      (tag
        (identifier))
      (tag
        (identifier))))
  (term
    (tag
      (identifier))))

================================================================================
dependent tag
================================================================================
-etikett-two.z
--------------------------------------------------------------------------------

(source_file
  (term
    (dependent_tag
      name: (identifier))
    (sigil)
    (genres
      (genre
        (identifier)))))
